# pekat-vision-sdk-python

./: .gitignore  404.html  CHANGELOG.md  LICENSE  README.md  UPGRADING.md  index.html  latest-changes.jinja2  mkdocs.yml  objects.inv  pekat_vision_instance.py  pyproject.toml  setup.py
.github/workflows/: labels.yml  latest-changes.yml  publish-to-test-pypi.yml  release.yml
CHANGELOG/: index.html
PekatVisionSDK/: __init__.py  pekat_vision_instance.py
UPGRADING/: index.html
docs/: index.md
docs/documentation/: errors.md  instance.md  result.md
documentation/errors/: index.html
documentation/instance/: index.html
documentation/result/: index.html
hooks/: on_pre_build.py
search/: search_index.json
src/PekatVisionSDK/: __init__.py  context.py  errors.py  instance.py  pekat_vision_instance.py  result.py
test/: test_pekat_vision_instance.py
